2020-11-01  Mark Wielaard  <mark@klomp.org>

	* elf_strptr.c (elf_strptr): Check shdr is not NULL.

2020-11-01  Mark Wielaard  <mark@klomp.org>

	* elf_getphdrnum.c (__elf_getphdrnum_rdlock): Set *dst to zero on
	error.

2020-11-01  Mark Wielaard  <mark@klomp.org>

	* libelfP.h (__libelf_data_type): Take an GElf_Ehdr instead of an
	Elf handle.
	* elf_getdata.c (__libelf_data_type): Likewise. And check ehdr
	directly instead of fetching a new one.
	(__libelf_set_rawdata_wrlock): Fetch Ehdr, report an error when that
	fails, otherwise call __libelf_data_type.

2020-10-28  Mark Wielaard  <mark@klomp.org>

	* elf.h: Update from glibc.

2020-08-28  Mark Wielaard  <mark@klomp.org>

	* elf.h: Update from glibc.

2020-08-19  Mark Wielaard  <mark@klomp.org>

	* elf32_updatenull.c (updatenull_wrlock): Fixup the sh_addralign
	of an SHF_COMPRESSED section if necessary.

2020-06-04  Mark Wielaard  <mark@klomp.org>

	* elf.h: Update from glibc.

2020-05-08  Mark Wielaard  <mark@klomp.org>

	* elf_strptr.c (elf_strptr): Check shdr is not NULL.

2020-05-08  Mark Wielaard  <mark@klomp.org>

	* elf_getdata.c (__libelf_set_rawdata_wrlock): Check
	__gelf_getehdr_rdlock return value.

2020-04-25  Mark Wielaard  <mark@klomp.org>

	* elf_compress.c (__libelf_compress): Remove free (out_buf).

2020-03-18  Omar Sandoval  <osandov@fb.com>

	* elf_getphdrnum.c (__elf_getphdrnum_rdlock): Call
	__elf{32,64}_getshdr_rdlock if the shdr is not cached.

2019-03-20  Matthias Maennich  <maennich@google.com>

	* elf_compress.c (__libelf_compress): Always call deflate_cleanup
	in failure path. Call deflateEnd only once.
	(__libelf_decompress): Call inflateEnd only once.

2019-06-18  Mark Wielaard  <mark@klomp.org>

	* common.h (allocate_elf): Use int64_t instead of off_t for offset.
	* elf32_newphdr.c (newphdr): Document why Elf32/64_Word is correct.
	* elf32_updatefile.c (fill): Use int64_t instead of off_t for pos.
	(updatefile): Define last_offset, shdr_offset and scn_start as